--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-tailwindcss": "^3.6.1",
     "eslint-plugin-testing-library": "^5.6.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "hbs-cli": "^1.4.1",
     "husky": "^8.0.1",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
