--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "export": "next export",
-    "build-prod": "run-s clean build export",
+    "inject-lang": "node scripts/inject-lang.js",
+    "build-prod": "run-s clean build export inject-lang",
     "clean": "rimraf .next out",
     "lint": "next lint",
     "check-types": "tsc --noEmit --pretty",
